--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -1,4 +1,4 @@
-name: CI with GitHub Actions using Maven and JUnit | © 2022 by giao.lang
+name: CI with GitHub Actions using Maven and JUnit | © 2022 by vidaibao
 
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
